// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshot - default 1`] = `
<button
  className="button button-default button-medium"
  disabled={false}
  style={
    Object {
      "--button-default-active": "#e5e5e5",
      "--button-default-border": "#d5d5d5",
      "--button-default-color": "#fff",
      "--button-default-foreground": "#5e6062",
      "--button-default-hover": "#fafafa",
      "--button-disabled-color": "#f1f1f1",
      "--button-disabled-foreground": "#c1c1c1",
      "--button-focus-outline": "#fff",
      "--button-focus-shadow": "#000",
      "--button-primary-active": "#b03808",
      "--button-primary-color": "#d4450c",
      "--button-primary-foreground": "#fff",
      "--button-primary-hover": "#be3c08",
      "--button-secondary-active": "#818181",
      "--button-secondary-color": "#949494",
      "--button-secondary-foreground": "#fff",
      "--button-secondary-hover": "#8b8b8b",
      "--button-transparent-color": "#027EB5",
    }
  }
/>
`;

exports[`Button matches snapshot - disabled 1`] = `
<button
  className="button button-default button-medium button-disabled"
  disabled={true}
  style={
    Object {
      "--button-default-active": "#e5e5e5",
      "--button-default-border": "#d5d5d5",
      "--button-default-color": "#fff",
      "--button-default-foreground": "#5e6062",
      "--button-default-hover": "#fafafa",
      "--button-disabled-color": "#f1f1f1",
      "--button-disabled-foreground": "#c1c1c1",
      "--button-focus-outline": "#fff",
      "--button-focus-shadow": "#000",
      "--button-primary-active": "#b03808",
      "--button-primary-color": "#d4450c",
      "--button-primary-foreground": "#fff",
      "--button-primary-hover": "#be3c08",
      "--button-secondary-active": "#818181",
      "--button-secondary-color": "#949494",
      "--button-secondary-foreground": "#fff",
      "--button-secondary-hover": "#8b8b8b",
      "--button-transparent-color": "#027EB5",
    }
  }
/>
`;

exports[`Button matches snapshot - large 1`] = `
<button
  className="button button-default button-large"
  disabled={false}
  style={
    Object {
      "--button-default-active": "#e5e5e5",
      "--button-default-border": "#d5d5d5",
      "--button-default-color": "#fff",
      "--button-default-foreground": "#5e6062",
      "--button-default-hover": "#fafafa",
      "--button-disabled-color": "#f1f1f1",
      "--button-disabled-foreground": "#c1c1c1",
      "--button-focus-outline": "#fff",
      "--button-focus-shadow": "#000",
      "--button-primary-active": "#b03808",
      "--button-primary-color": "#d4450c",
      "--button-primary-foreground": "#fff",
      "--button-primary-hover": "#be3c08",
      "--button-secondary-active": "#818181",
      "--button-secondary-color": "#949494",
      "--button-secondary-foreground": "#fff",
      "--button-secondary-hover": "#8b8b8b",
      "--button-transparent-color": "#027EB5",
    }
  }
/>
`;

exports[`Button matches snapshot - link 1`] = `
<a
  className="button button-default button-medium"
  href="/"
  style={
    Object {
      "--button-default-active": "#e5e5e5",
      "--button-default-border": "#d5d5d5",
      "--button-default-color": "#fff",
      "--button-default-foreground": "#5e6062",
      "--button-default-hover": "#fafafa",
      "--button-disabled-color": "#f1f1f1",
      "--button-disabled-foreground": "#c1c1c1",
      "--button-focus-outline": "#fff",
      "--button-focus-shadow": "#000",
      "--button-primary-active": "#b03808",
      "--button-primary-color": "#d4450c",
      "--button-primary-foreground": "#fff",
      "--button-primary-hover": "#be3c08",
      "--button-secondary-active": "#818181",
      "--button-secondary-color": "#949494",
      "--button-secondary-foreground": "#fff",
      "--button-secondary-hover": "#8b8b8b",
      "--button-transparent-color": "#027EB5",
    }
  }
>
  this is a link
</a>
`;

exports[`Button matches snapshot - medium 1`] = `
<button
  className="button button-default button-medium"
  disabled={false}
  style={
    Object {
      "--button-default-active": "#e5e5e5",
      "--button-default-border": "#d5d5d5",
      "--button-default-color": "#fff",
      "--button-default-foreground": "#5e6062",
      "--button-default-hover": "#fafafa",
      "--button-disabled-color": "#f1f1f1",
      "--button-disabled-foreground": "#c1c1c1",
      "--button-focus-outline": "#fff",
      "--button-focus-shadow": "#000",
      "--button-primary-active": "#b03808",
      "--button-primary-color": "#d4450c",
      "--button-primary-foreground": "#fff",
      "--button-primary-hover": "#be3c08",
      "--button-secondary-active": "#818181",
      "--button-secondary-color": "#949494",
      "--button-secondary-foreground": "#fff",
      "--button-secondary-hover": "#8b8b8b",
      "--button-transparent-color": "#027EB5",
    }
  }
/>
`;

exports[`Button matches snapshot - polymorphic with anchor component disabled 1`] = `
<a
  aria-disabled={true}
  className="button button-default button-medium button-disabled"
  href="/"
  onClick={[Function]}
  onKeyDown={[Function]}
  style={
    Object {
      "--button-default-active": "#e5e5e5",
      "--button-default-border": "#d5d5d5",
      "--button-default-color": "#fff",
      "--button-default-foreground": "#5e6062",
      "--button-default-hover": "#fafafa",
      "--button-disabled-color": "#f1f1f1",
      "--button-disabled-foreground": "#c1c1c1",
      "--button-focus-outline": "#fff",
      "--button-focus-shadow": "#000",
      "--button-primary-active": "#b03808",
      "--button-primary-color": "#d4450c",
      "--button-primary-foreground": "#fff",
      "--button-primary-hover": "#be3c08",
      "--button-secondary-active": "#818181",
      "--button-secondary-color": "#949494",
      "--button-secondary-foreground": "#fff",
      "--button-secondary-hover": "#8b8b8b",
      "--button-transparent-color": "#027EB5",
    }
  }
  tabIndex={-1}
>
  Link
</a>
`;

exports[`Button matches snapshot - polymorphic with div component disabled 1`] = `
<div
  aria-disabled={true}
  className="button button-default button-medium button-disabled"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  style={
    Object {
      "--button-default-active": "#e5e5e5",
      "--button-default-border": "#d5d5d5",
      "--button-default-color": "#fff",
      "--button-default-foreground": "#5e6062",
      "--button-default-hover": "#fafafa",
      "--button-disabled-color": "#f1f1f1",
      "--button-disabled-foreground": "#c1c1c1",
      "--button-focus-outline": "#fff",
      "--button-focus-shadow": "#000",
      "--button-primary-active": "#b03808",
      "--button-primary-color": "#d4450c",
      "--button-primary-foreground": "#fff",
      "--button-primary-hover": "#be3c08",
      "--button-secondary-active": "#818181",
      "--button-secondary-color": "#949494",
      "--button-secondary-foreground": "#fff",
      "--button-secondary-hover": "#8b8b8b",
      "--button-transparent-color": "#027EB5",
    }
  }
  tabIndex={-1}
>
  Div Button
</div>
`;

exports[`Button matches snapshot - polymorphic with input component 1`] = `
<input
  className="button button-default button-medium"
  disabled={false}
  style={
    Object {
      "--button-default-active": "#e5e5e5",
      "--button-default-border": "#d5d5d5",
      "--button-default-color": "#fff",
      "--button-default-foreground": "#5e6062",
      "--button-default-hover": "#fafafa",
      "--button-disabled-color": "#f1f1f1",
      "--button-disabled-foreground": "#c1c1c1",
      "--button-focus-outline": "#fff",
      "--button-focus-shadow": "#000",
      "--button-primary-active": "#b03808",
      "--button-primary-color": "#d4450c",
      "--button-primary-foreground": "#fff",
      "--button-primary-hover": "#be3c08",
      "--button-secondary-active": "#818181",
      "--button-secondary-color": "#949494",
      "--button-secondary-foreground": "#fff",
      "--button-secondary-hover": "#8b8b8b",
      "--button-transparent-color": "#027EB5",
    }
  }
  type="button"
  value="Submit"
/>
`;

exports[`Button matches snapshot - polymorphic with input component disabled 1`] = `
<input
  className="button button-default button-medium button-disabled"
  disabled={true}
  style={
    Object {
      "--button-default-active": "#e5e5e5",
      "--button-default-border": "#d5d5d5",
      "--button-default-color": "#fff",
      "--button-default-foreground": "#5e6062",
      "--button-default-hover": "#fafafa",
      "--button-disabled-color": "#f1f1f1",
      "--button-disabled-foreground": "#c1c1c1",
      "--button-focus-outline": "#fff",
      "--button-focus-shadow": "#000",
      "--button-primary-active": "#b03808",
      "--button-primary-color": "#d4450c",
      "--button-primary-foreground": "#fff",
      "--button-primary-hover": "#be3c08",
      "--button-secondary-active": "#818181",
      "--button-secondary-color": "#949494",
      "--button-secondary-foreground": "#fff",
      "--button-secondary-hover": "#8b8b8b",
      "--button-transparent-color": "#027EB5",
    }
  }
  type="button"
  value="Submit"
/>
`;

exports[`Button matches snapshot - primary 1`] = `
<button
  className="button button-primary button-medium"
  disabled={false}
  style={
    Object {
      "--button-default-active": "#e5e5e5",
      "--button-default-border": "#d5d5d5",
      "--button-default-color": "#fff",
      "--button-default-foreground": "#5e6062",
      "--button-default-hover": "#fafafa",
      "--button-disabled-color": "#f1f1f1",
      "--button-disabled-foreground": "#c1c1c1",
      "--button-focus-outline": "#fff",
      "--button-focus-shadow": "#000",
      "--button-primary-active": "#b03808",
      "--button-primary-color": "#d4450c",
      "--button-primary-foreground": "#fff",
      "--button-primary-hover": "#be3c08",
      "--button-secondary-active": "#818181",
      "--button-secondary-color": "#949494",
      "--button-secondary-foreground": "#fff",
      "--button-secondary-hover": "#8b8b8b",
      "--button-transparent-color": "#027EB5",
    }
  }
/>
`;

exports[`Button matches snapshot - secondary 1`] = `
<button
  className="button button-secondary button-medium"
  disabled={false}
  style={
    Object {
      "--button-default-active": "#e5e5e5",
      "--button-default-border": "#d5d5d5",
      "--button-default-color": "#fff",
      "--button-default-foreground": "#5e6062",
      "--button-default-hover": "#fafafa",
      "--button-disabled-color": "#f1f1f1",
      "--button-disabled-foreground": "#c1c1c1",
      "--button-focus-outline": "#fff",
      "--button-focus-shadow": "#000",
      "--button-primary-active": "#b03808",
      "--button-primary-color": "#d4450c",
      "--button-primary-foreground": "#fff",
      "--button-primary-hover": "#be3c08",
      "--button-secondary-active": "#818181",
      "--button-secondary-color": "#949494",
      "--button-secondary-foreground": "#fff",
      "--button-secondary-hover": "#8b8b8b",
      "--button-transparent-color": "#027EB5",
    }
  }
/>
`;

exports[`Button matches snapshot - small 1`] = `
<button
  className="button button-default button-small"
  disabled={false}
  style={
    Object {
      "--button-default-active": "#e5e5e5",
      "--button-default-border": "#d5d5d5",
      "--button-default-color": "#fff",
      "--button-default-foreground": "#5e6062",
      "--button-default-hover": "#fafafa",
      "--button-disabled-color": "#f1f1f1",
      "--button-disabled-foreground": "#c1c1c1",
      "--button-focus-outline": "#fff",
      "--button-focus-shadow": "#000",
      "--button-primary-active": "#b03808",
      "--button-primary-color": "#d4450c",
      "--button-primary-foreground": "#fff",
      "--button-primary-hover": "#be3c08",
      "--button-secondary-active": "#818181",
      "--button-secondary-color": "#949494",
      "--button-secondary-foreground": "#fff",
      "--button-secondary-hover": "#8b8b8b",
      "--button-transparent-color": "#027EB5",
    }
  }
/>
`;

exports[`Button matches snapshot - transparent 1`] = `
<button
  className="button button-transparent button-medium"
  disabled={false}
  style={
    Object {
      "--button-default-active": "#e5e5e5",
      "--button-default-border": "#d5d5d5",
      "--button-default-color": "#fff",
      "--button-default-foreground": "#5e6062",
      "--button-default-hover": "#fafafa",
      "--button-disabled-color": "#f1f1f1",
      "--button-disabled-foreground": "#c1c1c1",
      "--button-focus-outline": "#fff",
      "--button-focus-shadow": "#000",
      "--button-primary-active": "#b03808",
      "--button-primary-color": "#d4450c",
      "--button-primary-foreground": "#fff",
      "--button-primary-hover": "#be3c08",
      "--button-secondary-active": "#818181",
      "--button-secondary-color": "#949494",
      "--button-secondary-foreground": "#fff",
      "--button-secondary-hover": "#8b8b8b",
      "--button-transparent-color": "#027EB5",
    }
  }
/>
`;

exports[`Button matches snapshot - with children 1`] = `
<button
  className="button button-default button-medium"
  disabled={false}
  style={
    Object {
      "--button-default-active": "#e5e5e5",
      "--button-default-border": "#d5d5d5",
      "--button-default-color": "#fff",
      "--button-default-foreground": "#5e6062",
      "--button-default-hover": "#fafafa",
      "--button-disabled-color": "#f1f1f1",
      "--button-disabled-foreground": "#c1c1c1",
      "--button-focus-outline": "#fff",
      "--button-focus-shadow": "#000",
      "--button-primary-active": "#b03808",
      "--button-primary-color": "#d4450c",
      "--button-primary-foreground": "#fff",
      "--button-primary-hover": "#be3c08",
      "--button-secondary-active": "#818181",
      "--button-secondary-color": "#949494",
      "--button-secondary-foreground": "#fff",
      "--button-secondary-hover": "#8b8b8b",
      "--button-transparent-color": "#027EB5",
    }
  }
>
  Click me
</button>
`;

exports[`Button matches snapshot - with custom className 1`] = `
<button
  className="button button-default button-medium custom-class"
  disabled={false}
  style={
    Object {
      "--button-default-active": "#e5e5e5",
      "--button-default-border": "#d5d5d5",
      "--button-default-color": "#fff",
      "--button-default-foreground": "#5e6062",
      "--button-default-hover": "#fafafa",
      "--button-disabled-color": "#f1f1f1",
      "--button-disabled-foreground": "#c1c1c1",
      "--button-focus-outline": "#fff",
      "--button-focus-shadow": "#000",
      "--button-primary-active": "#b03808",
      "--button-primary-color": "#d4450c",
      "--button-primary-foreground": "#fff",
      "--button-primary-hover": "#be3c08",
      "--button-secondary-active": "#818181",
      "--button-secondary-color": "#949494",
      "--button-secondary-foreground": "#fff",
      "--button-secondary-hover": "#8b8b8b",
      "--button-transparent-color": "#027EB5",
    }
  }
/>
`;

exports[`Button matches snapshot - with custom style 1`] = `
<button
  className="button button-default button-medium"
  disabled={false}
  style={
    Object {
      "--button-default-active": "#e5e5e5",
      "--button-default-border": "#d5d5d5",
      "--button-default-color": "#fff",
      "--button-default-foreground": "#5e6062",
      "--button-default-hover": "#fafafa",
      "--button-disabled-color": "#f1f1f1",
      "--button-disabled-foreground": "#c1c1c1",
      "--button-focus-outline": "#fff",
      "--button-focus-shadow": "#000",
      "--button-primary-active": "#b03808",
      "--button-primary-color": "#d4450c",
      "--button-primary-foreground": "#fff",
      "--button-primary-hover": "#be3c08",
      "--button-secondary-active": "#818181",
      "--button-secondary-color": "#949494",
      "--button-secondary-foreground": "#fff",
      "--button-secondary-hover": "#8b8b8b",
      "--button-transparent-color": "#027EB5",
      "marginTop": "10px",
    }
  }
/>
`;

exports[`ButtonGroup matches snapshot (expand) 1`] = `
<div
  className="button-group"
/>
`;

exports[`ButtonGroup matches snapshot (not-expand) 1`] = `
<div
  className="button-group button-group-no-expand"
/>
`;

exports[`ButtonGroup matches snapshot (vertical and not-expand) 1`] = `
<div
  className="button-group button-group-no-expand button-group-vertical"
/>
`;

exports[`ButtonGroup matches snapshot (vertical) 1`] = `
<div
  className="button-group button-group-vertical"
/>
`;

exports[`ButtonGroup matches snapshot - with children 1`] = `
<div
  className="button-group"
>
  <button
    className="button button-default button-medium"
    disabled={false}
    style={
      Object {
        "--button-default-active": "#e5e5e5",
        "--button-default-border": "#d5d5d5",
        "--button-default-color": "#fff",
        "--button-default-foreground": "#5e6062",
        "--button-default-hover": "#fafafa",
        "--button-disabled-color": "#f1f1f1",
        "--button-disabled-foreground": "#c1c1c1",
        "--button-focus-outline": "#fff",
        "--button-focus-shadow": "#000",
        "--button-primary-active": "#b03808",
        "--button-primary-color": "#d4450c",
        "--button-primary-foreground": "#fff",
        "--button-primary-hover": "#be3c08",
        "--button-secondary-active": "#818181",
        "--button-secondary-color": "#949494",
        "--button-secondary-foreground": "#fff",
        "--button-secondary-hover": "#8b8b8b",
        "--button-transparent-color": "#027EB5",
      }
    }
  >
    Button 1
  </button>
  <button
    className="button button-default button-medium"
    disabled={false}
    style={
      Object {
        "--button-default-active": "#e5e5e5",
        "--button-default-border": "#d5d5d5",
        "--button-default-color": "#fff",
        "--button-default-foreground": "#5e6062",
        "--button-default-hover": "#fafafa",
        "--button-disabled-color": "#f1f1f1",
        "--button-disabled-foreground": "#c1c1c1",
        "--button-focus-outline": "#fff",
        "--button-focus-shadow": "#000",
        "--button-primary-active": "#b03808",
        "--button-primary-color": "#d4450c",
        "--button-primary-foreground": "#fff",
        "--button-primary-hover": "#be3c08",
        "--button-secondary-active": "#818181",
        "--button-secondary-color": "#949494",
        "--button-secondary-foreground": "#fff",
        "--button-secondary-hover": "#8b8b8b",
        "--button-transparent-color": "#027EB5",
      }
    }
  >
    Button 2
  </button>
</div>
`;

exports[`ButtonGroup matches snapshot 1`] = `
<div
  className="button-group"
/>
`;

exports[`ButtonLink matches snapshot (decorated and disabled) 1`] = `
<button
  className="plain-button button-link button-link-decorated"
  disabled={true}
  style={
    Object {
      "--link-color": "#027EB5",
      "--link-hover": "#0064A0",
    }
  }
/>
`;

exports[`ButtonLink matches snapshot (decorated) 1`] = `
<button
  className="plain-button button-link button-link-decorated"
  style={
    Object {
      "--link-color": "#027EB5",
      "--link-hover": "#0064A0",
    }
  }
/>
`;

exports[`ButtonLink matches snapshot - with className 1`] = `
<button
  className="plain-button button-link custom"
  style={
    Object {
      "--link-color": "#027EB5",
      "--link-hover": "#0064A0",
    }
  }
/>
`;

exports[`ButtonLink matches snapshot 1`] = `
<button
  className="plain-button button-link"
  style={
    Object {
      "--link-color": "#027EB5",
      "--link-hover": "#0064A0",
    }
  }
/>
`;

exports[`PlainButton matches snapshot - with children 1`] = `
<button
  className="plain-button"
>
  Click
</button>
`;

exports[`PlainButton matches snapshot - with className 1`] = `
<button
  className="plain-button custom"
/>
`;

exports[`PlainButton matches snapshot 1`] = `
<button
  className="plain-button"
/>
`;
